feat: Enhance UI and dependencies
Update dependencies for improved performance and add React-DOM for portal rendering. Refactor StreakRecoveryModal to use createPortal for better stacking context management and apply visual enhancements to progress nodes.

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     "framer-motion": "https://esm.sh/framer-motion@^12.27.0",
     "stripe": "https://esm.sh/stripe@^20.2.0",
     "buffer": "https://esm.sh/buffer@^6.0.3",
-    "firebase-admin/": "https://esm.sh/firebase-admin@^13.6.0/"
+    "firebase-admin/": "https://esm.sh/firebase-admin@^13.6.0/",
+    "react-dom": "https://esm.sh/react-dom@^19.2.4"
   }
 }
 </script>
