--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
     "stripe": "https://esm.sh/stripe@^20.2.0",
     "buffer": "https://esm.sh/buffer@^6.0.3",
     "firebase-admin/": "https://esm.sh/firebase-admin@^13.6.0/",
-    "react-dom": "https://esm.sh/react-dom@^19.2.4"
+    "react-dom": "https://esm.sh/react-dom@^19.2.4",
+    "lucide-react": "https://esm.sh/lucide-react@^0.475.0"
   }
 }
 </script>
