--- a/index.html
+++ b/index.html
@@ -56,8 +56,7 @@
     "buffer": "https://esm.sh/buffer@^6.0.3",
     "firebase-admin/": "https://esm.sh/firebase-admin@^13.6.0/",
     "react-dom": "https://esm.sh/react-dom@^19.2.4",
-    "lucide-react": "https://esm.sh/lucide-react@^0.475.0",
-    "react-joyride": "https://esm.sh/react-joyride@^2.9.3"
+    "lucide-react": "https://esm.sh/lucide-react@^0.475.0"
   }
 }
 </script>
