feat: Implement Epitaph feature for user reflection
Adds functionality for users to write daily "epitaphs" (reflections) and receive AI-generated insights.

This includes:
- A new API endpoint (`epitaph-insight.ts`) to process user logs and generate insights using Google GenAI.
- A new service (`epitaphService.ts`) for saving epitaph logs and fetching history.
- Integration into the `DashboardScreen` to trigger epitaph input.
- Integration into the `ProfileScreen` to view epitaph history.
- Updates to `types.ts` to accommodate new epitaph-related fields and interfaces.
- Addition of `@google/genai` dependency in `index.html`.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
     "firebase-admin/": "https://esm.sh/firebase-admin@^13.6.0/",
     "react-dom": "https://esm.sh/react-dom@^19.2.4",
     "lucide-react": "https://esm.sh/lucide-react@^0.475.0",
-    "react-joyride": "https://esm.sh/react-joyride@^2.9.3"
+    "react-joyride": "https://esm.sh/react-joyride@^2.9.3",
+    "@google/genai": "https://esm.sh/@google/genai@^1.41.0"
   }
 }
 </script>
