--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     "lucide-react": "https://esm.sh/lucide-react@^0.475.0",
     "react-joyride": "https://esm.sh/react-joyride@^2.9.3",
     "@google/genai": "https://esm.sh/@google/genai@^1.41.0",
-    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.24.1"
+    "@google/generative-ai": "https://esm.sh/@google/generative-ai@^0.24.1",
+    "next/": "https://esm.sh/next@^16.1.6/"
   }
 }
 </script>
